# manimations

./: main.py  pyproject.toml  script.ipynb  script.py  setup.py
media/Tex/: 0b940271e72527e2.tex  0ba9fafaba763dd1.tex  116c8d3f7cbb73e2.tex  16c845e936b329b5.tex  182d14768ee1d26d.tex  1959a6c60561ceca.tex  1b7d3aa8e498b062.tex  276c3e9d7b42f98b.tex  2dbf94488cd4d8bf.tex  2f957db252970bc2.tex  306cdd08d07b664e.tex  307037945ed79654.tex  3070c99659e687cb.tex  312b5a9b486c156b.tex  35d4ece56320fd92.tex  388b783f3355aca6.tex  3d72d78b88cf621e.tex  3fddeeca2a89ab29.tex  4367ab679f8135fa.tex  43c9ac73fcab113c.tex  444378b28735ca48.tex  4cf6537722bb006c.tex  4d2e65c736de5fb6.tex  5264979b27f27e14.tex  529b3b930c8a1136.tex  53fc15bc66f93ebe.tex  5de3e92280a428bb.tex  6a9755d38f090c7b.tex  738abf3602c844d8.tex  7882e31a9f2b8d3e.tex  7b768ba750cc2503.tex  8edf89f3aad6a02d.tex  91a26e9d3c8c1c3e.tex  92fa4f0b5a99c1a8.tex  9d57efb4168495d3.tex  a2bea8811d1239e4.tex  a606a590ab546c6b.tex  a6c4409e0e99541c.tex  aa373c5361f7d8dd.tex  aa4bf2f8bc7047fa.tex  (+14 more)
media/videos/main/1080p60/partial_movie_files/BieuThuc/: partial_movie_file_list.txt
media/videos/main/1080p60/partial_movie_files/Cau11_HinhMinhHoa/: partial_movie_file_list.txt
media/videos/main/1080p60/partial_movie_files/DoThiBacBa/: partial_movie_file_list.txt
media/videos/main/1080p60/partial_movie_files/DoThiSin/: partial_movie_file_list.txt
media/videos/main/1080p60/partial_movie_files/EquationExercise/: partial_movie_file_list.txt
media/videos/main/1080p60/partial_movie_files/HelloScene/: partial_movie_file_list.txt
(+12 files in other folders)
